--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "open-iterm2-root",
-  "displayName": "open-iterm2-root",
-  "description": "open iterm2 with workbench rootDir.",
-  "version": "1.0.0",
+  "displayName": "Open iTerm2 Root",
+  "description": "open iterm2 with workbench rootDir for vscode.",
+  "version": "1.0.2",
   "author": "Abunuo",
+  "publisher": "Abunuo",
   "engines": {
-    "vscode": "^1.76.0"
-  },
+		"vscode": "^1.76.0"
+	},
+	"icon": "res/icon.png",
   "keywords": [
     "iterm2",
     "open-iterm2"
@@ -14,16 +16,56 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/Abunuo/open-iterm2-root.git"
+	},
+  "activationEvents": [
+		"onCommand:extension.openITerm2",
+		"onCommand:extension.openITerm2Root"
+	],
   "main": "./out/extension.js",
   "contributes": {
-    "commands": [
-      {
-        "command": "open-iterm2-root.helloWorld",
-        "title": "Hello World"
-      }
-    ]
-  },
+		"commands": [
+			{
+				"command": "extension.openITerm2",
+				"title": "Open iTerm2 Here"
+			}, {
+				"command": "extension.openITerm2Root",
+				"title": "Open iTerm2 Root"
+			}
+		],
+		"menus": {
+			"explorer/context": [
+				{
+					"command": "extension.openITerm2"
+				}, {
+					"command": "extension.openITerm2Root"
+				}
+			],
+			"editor/context": [
+				{
+					"command": "extension.openITerm2"
+				}, {
+					"command": "extension.openITerm2Root"
+				}
+			],
+			"editor/title": [
+				{
+					"command": "extension.openITerm2"
+				}, {
+					"command": "extension.openITerm2Root"
+				}
+			],
+			"editor/title/context": [
+				{
+					"command": "extension.openITerm2"
+				}, {
+					"command": "extension.openITerm2Root"
+				}
+			]
+		}
+	},
   "scripts": {
     "vscode:prepublish": "yarn run compile",
     "compile": "tsc -p ./",
